--- a/requirements.txt
+++ b/requirements.txt
@@ -83,7 +83,7 @@ smmap2==2.0.4
 snowballstemmer==1.2.1
 Sphinx==1.7.4
 sphinxcontrib-websupport==1.0.1
-SQLAlchemy==1.2.12
+SQLAlchemy>=1.3.0
 tldextract==2.2.0
 tornado==5.0.2
 traitlets==4.3.2
