--- a/requirements.txt
+++ b/requirements.txt
@@ -87,7 +87,7 @@ SQLAlchemy>=1.3.0
 tldextract==2.2.0
 tornado==5.0.2
 traitlets==4.3.2
-urllib3==1.23
+urllib3>=1.24.2
 wcwidth==0.1.7
 Werkzeug==0.14.1
 wrapt==1.10.11
